# pdf-finder-pro

./: .gitignore  AGENTS.md  BEFORE_AFTER_COMPARISON.md  BEST_PRACTICES.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  IMPROVEMENTS_README.md  IMPROVEMENTS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SECURITY_FIXES.md  TESTING_REPORT.md  UX_IMPROVEMENTS.md  index.html  license-ui.js  main.js  package-lock.json  package.json  styles.css
landing/: README.md  index.html  landing.css
specs/: INDEX.md  README.md  TEMPLATE.md
specs/api/: README.md
specs/architecture/: README.md
specs/deployment/: README.md
specs/features/: README.md
specs/features/2026-01-lemon-squeezy-payment/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  USER_GUIDE.md  implementation-checklist.md
specs/marketing/2026-01-revenue-generation/: README.md
specs/performance/: README.md
specs/performance/2026-01-indexing-optimizations/: README.md  checklist.md  implementation-rationale.md  technical-details.md
specs/security/: README.md
specs/testing/: README.md
specs/testing/2026-01-exploratory-testing-fixes/: ADDITIONAL_ISSUES_ROUND2.md  CHANGES_SUMMARY.md  FINAL_SUMMARY.md  README.md
specs/ux-improvements/: IMPLEMENTATION_ROADMAP.md  QUICK_VISUAL_EXAMPLES.md  README_UX_PROJECT.md  UX_IMPROVEMENTS_SUMMARY.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  indexer.rs  lib.rs  license.rs  main.rs  validation.rs
(+2 files in other folders)
