[package]
name = "pdf-finder-pro"
version = "0.1.0"
description = "Cross-platform desktop app for fast, private full-text PDF search"
authors = ["PDF Finder Pro Team"]
edition = "2021"

[lib]
name = "pdf_finder_pro_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
pdf-extract = "0.7"
walkdir = "2.5"
chrono = "0.4"
anyhow = "1.0"
dirs = "5.0"
